Add tooltip to websocket message checkbox

--- a/currentViewer.html
+++ b/currentViewer.html
@@ -581,7 +581,12 @@
               class="esri-input"
               type="checkbox"
             />
-            <label for="useSendMessageToSocket">Use sendMessageToSocket API</label>
+            <label
+              for="useSendMessageToSocket"
+              title="When unchecked, the app logic will clear previous observations when setting new filters."
+            >
+              Use sendMessageToSocket API
+            </label>
           </div>
         </div>
       </section>
